--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -77,13 +77,13 @@ After graduating college, I moved to Pennsylvania, and started outsourcing work 
 </div>
 <div class="queries" id="query">
     <div class="row1">
-    <a href="./SQLqueries/60minSQL.sql" target="_parent">MySQL Albums<img src="./images/MySQL60Min.png"></a></div>
+    <a href="./SQLqueries/60minSQL.sql" target="_parent">MySQL: Albums<img src="./images/MySQL60Min.png"></a></div>
     <div class="row1">
-    <a href="./SQLqueries/SQL Covid Project 1.sql" target="_top">Covid Project<img src="./images/CovidQueries.png"></a></div>
+    <a href="./SQLqueries/SQL Covid Project 1.sql" target="_top">T-SQL: Covid Project<img src="./images/CovidQueries.png"></a></div>
     <div class="row1">
-    <a href="./SQLqueries/VideoGameQueries.sql" target="_top">Video Game Project<img src="./images/VideoGameQueries.png"></a></div>
+    <a href="./SQLqueries/VideoGameQueries.sql" target="_top">T-SQL: Video Game Project<img src="./images/VideoGameQueries.png"></a></div>
     <div class="row1">
-    <a href="./SQLqueries/Subqueries.sql" target="_top">Subqueries Project<img src="./images/Subqueries.png"></a></div>
+    <a href="./SQLqueries/Subqueries.sql" target="_top">T-SQL: Subqueries<img src="./images/Subqueries.png"></a></div>
 </div>
 <div class="Tableau" id="Tableau">
     <div class="row1">
