--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -77,7 +77,7 @@ After graduating college, I moved to Pennsylvania, and started outsourcing work 
 </div>
 <div class="queries" id="query">
     <div class="row1">
-    <a href="./SQLqueries/60minSQL.sql" target="_parent">MySQL: Albums<img src="./images/MySQL60Min.png"></a></div>
+    <a href="./SQLqueries/60minSQL.sql" target="_parent">MySQL Albums<img src="./images/MySQL60Min.png"></a></div>
     <div class="row1">
     <a href="./SQLqueries/SQL Covid Project 1.sql" target="_top">T-SQL: Covid Project<img src="./images/CovidQueries.png"></a></div>
     <div class="row1">
