--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -71,9 +71,9 @@ After graduating college, I moved to Pennsylvania, and started outsourcing work 
     </p>
 </div>
 <div class="projects" id="projects">
-  <br><h1>Projects</h1>
+  <p>Projects</p>
 <div class="SQL">
-  <p>SQL / T-SQL</p><br><br>
+  <p>SQL / T-SQL</p>
 </div>
 <div class="queries" id="query">
     <div class="row1">
