--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -63,12 +63,9 @@
 </div>
 <div class="aboutTitle"><h2>About</h2></div>
 <div class="aboutism" id="about">
- <br><p>Welcome to my portfolio page! I built this webpage for better accessibility and display of my GitHub projects, which I intend to improve upon and add more content. This portfolio page was made in the hopes of finding a good job opportunity as a Data Analysis, or in Development.</p> 
+ <br><p>Welcome to my portfolio page! I built this webpage for better accessibility and display of my GitHub projects, which I intend to improve upon and add more content. 
  <br>
-<p>My name is Nicholas Knight, I'm a 36 year old male with a B.S. degree in business management. My family owned an IT business in which I started learning many computer skills at a young age, starting with hardware, repair, security, and software applications. I started my own company, WyGos, back in 2013 just before starting college. This company originally started out in logistics and retail, managed a few employees to pick up items from clients and sell them at a store or online.<br><br>
-
-After graduating college, I moved to Pennsylvania, and started outsourcing work through WyGos. Around 2018 I started accepting work for writing Javascript functions into an API application and really enjoyed it, sparking my interest in coding. I previously have worked with databases professionally and also had a similar sense of fulfillment, which is why I decided to further direct my skills into SQL.
-    </p>
+ This portfolio page is open-source, written with HTML5, CSS, JavaScript, and JQuerry. Projects that are included in the portfolio page are made with SQL, JavaScript, Python, Unity, C#, and an interactive Tableau dashboard.</p>
 </div>
 <div class="projects" id="projects">
   <p>Projects</p>
