--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -63,9 +63,12 @@
 </div>
 <div class="aboutTitle"><h2>About</h2></div>
 <div class="aboutism" id="about">
- <br><p>Welcome to my portfolio page! I built this webpage for better accessibility and display of my GitHub projects, which I intend to improve upon and add more content. 
- <br>
- This portfolio page is open-source, written with HTML5, CSS, JavaScript, and JQuerry. Projects that are included in the portfolio page are made with SQL, JavaScript, Python, Unity, C#, and an interactive Tableau dashboard.</p>
+ <br><p>Welcome to my portfolio page! My name is Nicholas Knight, and I built this webpage for better accessibility and display of my GitHub projects, which I intend to improve upon and add more content.
+     This portfolio page is open-source, written with HTML5, CSS, JavaScript, and JQuerry. 
+     Projects that are included in the portfolio page are made with SQL, JavaScript, Python, Unity, C#, and an interactive Tableau dashboard.
+
+   
+ </p>
 </div>
 <div class="projects" id="projects">
   <p>Projects</p>
