--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -152,5 +152,14 @@
           <br>
           <a>Email: NKnight@KnightGroup.com</a>
                     </div></footer>
+<script src="./project.js"></script>
+<script type="text/javascript">
+    $(window).scroll(function() {
+      var scrollPos = $(this).scrollTop();
+      $(".hero-back").css({
+        'background-size' : 100 + scrollPos + '.1%'
+      });
+    });
+  </script>
 
 </body>
