--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 </head>
 <nav>
+  <h2>Nicholas Knight's Portfolio-Page</h2>
   <div class="sideLinks">
   <ul>
   <li class="current"><a href="projects.html">Home</a></li>
@@ -43,33 +44,48 @@
 <div class="boxes2">
     <ul><div class="bxtxt"><br>
     <li>Computer Networking, Development, & Security Systems</li>
-        <br>
-        <li>Family Owned - Since 1995</li>
-    </div>
+                   </div>
     <div class="bxtxt"><br>
       <li>Programming Group</li>
-      <br>
-        <li>Crypto & Options Trading </li>
-        <br>
-            </div>
+                  </div>
     <div class="bxtxt">
-        <br>
-        <li>Self-Owned LLC</li>
-        <br>
-        <li>Management & Outsourcing</li>
+      <br>
+      <li>Management & Outsourcing</li>
         
     </div></ul>
 
 </div>
 <div class="aboutTitle"><h2>About</h2></div>
 <div class="aboutism" id="about">
- <br><p>Welcome to my portfolio page! My name is Nicholas Knight, and I built this webpage for better accessibility and display of my GitHub projects, which I intend to improve upon and add more content.
-     This portfolio page is open-source, written with HTML5, CSS, JavaScript, and JQuerry. 
-     Projects that are included in the portfolio page are made with SQL, JavaScript, Python, Unity, C#, and an interactive Tableau dashboard.
-
-   
- </p>
+ <br>
+<p>  
+ 
+  Welcome to my portfolio website! This portfolio page is an old version which will need to be updated. My name is Nicholas Knight, and I'm passionate about business management and technology. With a Bachelor's degree in Business Administration Management from St. Petersburg College, I've cultivated a unique skill set that merges my love for business strategy with my expertise in programming and web development.
+  <br>
+  <br>
+  Growing up in an environment steeped in IT and business management, I've honed my abilities by creating numerous queries, websites, and e-commerce stores using HTML5, CSS, and JavaScript. Additionally, I've been actively involved in the JavaScript programming community, collaborating on projects ranging from gaming applications to web development solutions.
+  <br>
+  <br>
+  Throughout my career, I've had the opportunity to manage teams across various fields, leveraging my leadership skills to drive success and foster collaboration. My approach to management is rooted in effective communication, strategic thinking, and a relentless pursuit of excellence.
+  <br>
+  <br>
+  The inspiration behind this portfolio website stems from my desire to showcase my work and skill sets to potential employers and clients. By providing a glimpse into my projects and capabilities, I aim to create a "wow factor" that highlights my creativity, technical proficiency, and commitment to excellence.
+  <br>
+  <br>
+  In designing this website, I prioritize accessibility and display, ensuring that visitors can easily navigate and engage with the content. From an always-available search bar to captivating visuals such as 4K videos and dynamic banners, I strive to create an immersive experience that leaves a lasting impression.
+  <br>
+  <br>
+  I'm particularly drawn to businesses with promising growth potential, where I can apply my expertise to drive innovation and success. As a lifelong learner, I'm constantly staying updated with the latest trends and technologies through various apps and analytic software.
+  <br>
+  <br>
+  Outside of my professional pursuits, you'll often find me indulging in my personal hobbies, which largely revolve around exploring new technologies and learning new skills. With an outgoing personality and a relentless drive to excel, I'm always eager to tackle new challenges and exceed expectations.
+  <br>
+  <br>
+  Thank you for visiting my portfolio website. I look forward to connecting with you and exploring opportunities for collaboration and growth.
+ <br><br>
+    </p>
 </div>
+
 <div class="projects" id="projects">
   <p>Projects</p>
 <div class="SQL">
@@ -85,6 +101,7 @@
     <div class="row1">
     <a href="./SQLqueries/Subqueries.sql" target="_top">T-SQL: Subqueries<img src="./images/Subqueries.png"></a></div>
 </div>
+
 <div class="Tableau" id="Tableau">
     <div class="row1">
         <a href="https://public.tableau.com/views/CovidDashboard_16933543014790/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" target="_blank">Tableau - Covid Dashboard<img src="./images/TableauDashboard.png" alt="Tablea Dashboard">
@@ -93,6 +110,7 @@
         <a href="https://public.tableau.com/views/VideoGameDashboard_16940106263160/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" target="_blank">Tableau - Video Game Dashboard<img src="./images/TableauVideoGames.png" alt="Tablea Dashboard">
         </div>
     </div>
+
 <div class="Javascript">
     <a style="text-decoration: none;"></a>
   <p>Javascript</p></div>
@@ -152,14 +170,14 @@
           <br>
           <a>Email: NKnight@KnightGroup.com</a>
                     </div></footer>
-<script src="./project.js"></script>
-<script type="text/javascript">
+
+  <script src="./project.js"></script>
+  <script type="text/javascript">
     $(window).scroll(function() {
       var scrollPos = $(this).scrollTop();
       $(".hero-back").css({
-        'background-size' : 100 + scrollPos + '.1%'
+        'background-size' : 100 + scrollPos + '%'
       });
     });
   </script>
-
 </body>
