--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -127,10 +127,10 @@
                     </div>
                     <div class="projectsGames">
                         <div class="row1">
-                            <a href="./JavaScript-Tic-Tac-Toe-master/index.html" target="_blank">Play Tic-Tac-Toe<img src="./images/tictactoeposter.png" alt="Play Tic Tac Toe"></a>
+                            <a href="./JavaScript-Tic-Tac-Toe-master/index.html" target="_blank">Tic-Tac-Toe<img src="./images/tictactoeposter.png" alt="Play Tic Tac Toe"></a>
                         </div>
                         <div class="row1">
-                            <a href="./Chess-Game-main/index.html" target="_blank">Play Chess<img src="./images/chessposter.png" alt="Play Chess"></a>
+                            <a href="./Chess-Game-main/index.html" target="_blank">Chess<img src="./images/chessposter.png" alt="Play Chess"></a>
                         </div>
                     </div></div>
                 </section>
@@ -158,10 +158,10 @@
                             <a href="./PythonScripts/whirlwind.png" target="_top">Whirlwind<img src="./PythonScripts/whirlwind.png"></a>
                         </div>
                         <div class="row1">
-                            <a href="./PythonScripts/poisonweap.png" target="_top">Poisons Weapon<img src="./PythonScripts/poisonweap.png"></a>
+                            <a href="./PythonScripts/poisonweap.png" target="_top">Poison Weapon<img src="./PythonScripts/poisonweap.png"></a>
                         </div>
                         <div class="row1">
-                            <a href="./PythonScripts/nodachidismount.png" target="_top">No-Dachi Dismount<img src="./PythonScripts/nodachidismount.png"></a>
+                            <a href="./PythonScripts/nodachidismount.png" target="_top">Dismount<img src="./PythonScripts/nodachidismount.png"></a>
                         </div>
                     </div></div>
                 </section>
