--- a/PortfolioPage/Projects.1.html
+++ b/PortfolioPage/Projects.1.html
@@ -37,7 +37,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li class="email">
-                        <a href="mailto:Nicholas.jknight@yahoo.com">Email Me</a></li>
+                        <a href="mailto:Nickknight488@gmail.com">Email Me</a></li>
                 </ul>
             </nav>
         </div>
@@ -220,7 +220,7 @@
         <div class="mankave">
         <h1>Check out my E-Commerce Store! </h1>
         
-        <a href="https://ManKave.Store" target="_blank">www.ManKave.Store</a>
+        <a href="https://Man-Kave.com" target="_blank">www.Man-Kave.com</a>
         </div>
     </section>
 
