--- a/PortfolioPage/Projects1.html
+++ b/PortfolioPage/Projects1.html
@@ -79,7 +79,7 @@
                 <br><br>
                 <p><strong>Programming & Web Development:</strong> Proficient in <strong>Python</strong>, <strong>JavaScript</strong>, <strong>HTML5</strong>, and <strong>CSS</strong> for full-stack development. Developed gaming applications using JavaScript, showcasing my technical proficiency and problem-solving abilities. Automated workflows with <strong>PowerShell</strong> scripts, integrated with third-party applications to streamline processes.</p>
                 <br><br>
-                <p><strong>Entrepreneurship & E-Commerce:</strong> Founder and owner of <strong>Man-Kave.com</strong>, <strong>Knight Group</strong>, and <strong>WyGos</strong>, businesses focused on e-commerce and business development. Optimized operations through SEO strategies, data-driven marketing, and customer behavior analytics. Managed online presence across platforms like <strong>Google Merchant Center</strong> and developed marketing dashboards for enhanced decision-making.</p>
+                <p><strong>Entrepreneurship & E-Commerce:</strong> Founder and owner of <strong>ManCaves.Store</strong>, <strong>Knight Group</strong>, and <strong>WyGos</strong>, businesses focused on e-commerce and business development. Optimized operations through SEO strategies, data-driven marketing, and customer behavior analytics. Managed online presence across platforms like <strong>Google Merchant Center</strong> and developed marketing dashboards for enhanced decision-making.</p>
             </div>
             <div class="aboutism-section">
                 <h3>Portfolio Highlights</h3>
@@ -104,7 +104,7 @@
 <section id="contact-parallax" class="parallax parallax3">
     <div class="mankave">
         <h2>Check out my E-Commerce Store! </h2>
-        <a href="https://Man-Kave.com" target="_blank">www.Man-Kave.com</a>
+        <a href="https://ManCaves.store" target="_blank"> ManCaves.store</a>
     </div>
 
 </section>
